<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D1FFFF">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/aboutTitle"
		    android:textSize="@dimen/activity_title_size"
		    android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:layout_marginTop="10dip" />
		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dip"
		   	android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
		    android:text="@string/aboutParagraphOne"
		    android:textSize="@dimen/activity_text_size" />
		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dip"
		    android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
		    android:text="@string/notableFeatures"
		    android:textSize="@dimen/activity_text_size" />		
		<TextView
		    android:id="@+id/contact"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dip"
		    android:layout_marginLeft="10dip"
	    	android:layout_marginRight="10dip"
	    	android:layout_marginBottom="20dip"
		    android:text="@string/aboutContact"
		    android:textSize="@dimen/activity_text_size" />

	</LinearLayout>
</ScrollView>