<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#D1FFFF" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	   	<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="50dp"
		    android:orientation="horizontal"
		    android:gravity="center"
		    android:layout_marginTop="20dip" >
	
			<ToggleButton
				android:id="@+id/toggleButton1"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent"
				android:onClick="onToggleClicked" 
				android:layout_marginRight="5dp"
				android:textOn="Enabled"
				android:textOff="Disabled"
			/>
		   	
		   	<TextView
		   	    android:id="@+id/textView1"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:text="@string/enable"
		   	    android:textSize="16sp"
		   	    android:textStyle="bold" 
			/> 	
	   	</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="#000000"
		    android:layout_marginTop="20dip" >
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"   >
		   	<TextView
		   	    android:id="@+id/textView2"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:layout_marginLeft="10dip"
		   	    android:layout_marginTop="10dip"
		   	    android:layout_marginBottom="10dip"
		   	    android:text="@string/settings"
		   	    android:textSize="20sp"
		   	    android:textStyle="bold" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="#000000" >
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip" >
		   	<TextView
		   	    android:id="@+id/textView3"
		   	    android:layout_width="0dip"
		   	    android:layout_height="wrap_content"
		   	    android:layout_marginTop="5dp"
		   	    android:layout_weight="0.3"
		   	    android:text="@string/frequencyLabel"
		   	    android:textSize="18sp" 
		   	/>
		   	<LinearLayout     
		   	    android:layout_width="0dip"
		   	    android:layout_weight="0.7"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical" >
				<SeekBar
			        android:id="@+id/seekBar1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:max="12" 
			        android:progress="6"
				/>
				<TextView
				    android:id="@+id/textView4"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal"
				    android:text="@string/frequency"
				    android:textSize="18sp" 
				/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:orientation="horizontal"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip" >  
			<TextView
				android:id="@+id/textView5"
	    		android:layout_width="0dip"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="0dip"
			    android:layout_weight="0.3"
			    android:text="@string/speedLabel"
			    android:textSize="18sp" 
			/>
	   	   	<LinearLayout     
		   	    android:layout_width="0dip"
		   	    android:layout_weight="0.7"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical">
				<SeekBar
			        android:id="@+id/seekBar2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:max="3" 
			        android:progress="2"
				/>
				<TextView
				    android:id="@+id/textView6"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_gravity="center_horizontal"
				    android:text="@string/speed"
				    android:textSize="18sp" 
				/>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip"
			android:orientation="horizontal"
			android:focusable="true"
			android:focusableInTouchMode="true" >  
			<TextView
			    android:id="@+id/textView7"
			    android:layout_width="0dip"
			    android:layout_weight="0.3"
			    android:layout_height="wrap_content"
			    android:text="@string/testMessage"
		
			    android:textSize="18sp" 
			/>
			<EditText
			    android:id="@+id/editTextToTranslate"
			    android:layout_width="0dip"
			    android:layout_weight="0.7"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:inputType="text"
			    android:text="@string/speak"
			    android:textSize="20sp" 
			/>
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="#000000"
		    android:layout_marginTop="20dip"
		/>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >      
		   	<Button
				android:id="@+id/buttonSpeak"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:layout_weight="1"
		   	    android:onClick="onButtonClicked"
		   	    android:text="@string/button"
		   	    android:layout_marginLeft="10dip"
		   	    android:layout_marginTop="10dip"
		   	    android:layout_marginBottom="10dip"
		   	    android:layout_marginRight="10dip"
		   	    android:textSize="20sp" 
			/>
		   	<Button
				android:id="@+id/buttonDefault"
				android:layout_height="wrap_content"
		 	    android:layout_width="wrap_content"
		 	    android:layout_weight="1"
				android:onClick="onDefaultButtonClicked"
				android:text="@string/buttonDefault"
				android:textSize="20sp"
				android:layout_marginLeft="10dip"
		 	    android:layout_marginTop="10dip"
		 	    android:layout_marginBottom="10dip"
		 	    android:layout_marginRight="10dip" 
			/> 
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="2dp"
		    android:background="#000000"
		/>
	</LinearLayout>
</ScrollView>
